Changelog
=========

1.4 (xx.xx.xxxx)
~~~~~~~~~~~~~~~~

 * The `Document` model can now be overridden using the new `WAGTAILDOCS_DOCUMENT_MODEL` setting (Alex Gleason)
 * Fix: Custom page managers no longer raise an error when used on an abstract model
 * Fix: Wagtail's migrations are now all reversible (benjaoming)
 * Fix: Deleting a page content type now preserves existing pages as basic Page instances, to prevent tree corruption
 * Fix: The `Page.path` field is now explicitly given the "C" collation on PostgreSQL to prevent tree ordering issues when using a database created with the Slovak locale
 * Fix: Wagtail's compiled static assets are now put into the correct directory on Windows (Aarni Koskela)
 * Fix: `ChooserBlock` now correctly handles models with primary keys other than `id` (alexpilot11)

1.3.1 (05.01.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Applied workaround for failing wagtailimages migration on Django 1.8.8 / 1.9.1 with Postgres (see <https://code.djangoproject.com/ticket/26034>)

1.3 (23.12.2015)
~~~~~~~~~~~~~~~~

 * Django 1.9 support
 * Support for indexing fields across relations in Elasticsearch
 * Added toolbar to cross-link between different search areas, and `register_admin_search_area` hook to register new areas (Ben Kerle)
 * Added `WagtailPageTests`, a helper module to simplify writing tests for Wagtail sites
 * Added system checks to check the `subpage_types` and `parent_page_types` attributes of page models
 * Added `WAGTAIL_PASSWORD_RESET_ENABLED` setting to allow password resets to be disabled independently of the password management interface (John Draper)
 * Submit for moderation notification emails now include the editor name (Denis Voskvitsov)
 * Updated fonts for more comprehensive Unicode support
 * Added `.alt` attribute to image renditions
 * The default `src`, `width`, `height` and `alt` attributes can now be overridden by attributes passed to the `{% image %}` tag